--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server-express": "^3.10.3",
     "bcrypt": "^5.0.0",
+    "code-point-at": "^2.0.0",
     "express": "^4.17.1",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
