--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "node": "^18.9.0"
   }
 }
