--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
+  "engines":{ "node": "^16.6.0"
+
+  },
   "scripts": {
     "start": "node server/server.js",
     "develop": "clear & concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
@@ -16,7 +19,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
-    "react-router-dom": "^6.4.1",
-    "node": "^16.6.0"
+    "react-router-dom": "^6.4.1"
+   
   }
 }
